EIDDSS-704, upgraded to grails 5.2.1 and change all compile dependencies to implementation or api. Also fixed failing integration tests due to expired certificate and failing docker images.

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 group "se.signatureservice.support"
 
+apply plugin: "java-library"
+
 certserviceSettings {
     useGroovyInMain = false
+    useMavenCentral = true
     licenseName = "GNU Lesser General Public License v3.0 or later"
     licenseURL = "https://www.gnu.org/licenses/lgpl-3.0-standalone.html"
+
 }
 
 sourceCompatibility = "1.8"
@@ -14,7 +18,6 @@ ext {
 }
 
 repositories {
-    mavenCentral()
     maven {
         url "https://ec.europa.eu/cefdigital/artifact/content/repositories/esignaturedss/"
     }
@@ -28,24 +31,30 @@ sourceSets {
     }
 }
 
+
+configurations {
+    integrationTestCompileClasspath.extendsFrom testCompileClasspath
+    integrationTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
 dependencies {
-    compile "eu.europa.ec.joinup.sd-dss:dss-xades:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-cades:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-pades:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:${dssVersion}"
-    compile "eu.europa.ec.joinup.sd-dss:dss-service:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-utils:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:$dssVersion"
-    compile "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:$dssVersion"
-    compile 'org.apache.pdfbox:pdfbox:2.0.26'
-    compile "org.apache.santuario:xmlsec:2.1.7"
-    compile 'org.slf4j:slf4j-api:1.7.36'
-    compile 'org.slf4j:slf4j-simple:1.7.36'
-    compile 'org.json:json:20220320'
-    compile ("org.springframework:spring-context:5.3.19") {
+    api "eu.europa.ec.joinup.sd-dss:dss-xades:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-cades:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-service:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:$dssVersion"
+    api 'org.apache.pdfbox:pdfbox:2.0.26'
+    api "org.apache.santuario:xmlsec:2.1.7"
+    api 'org.slf4j:slf4j-api:1.7.36'
+    api 'org.slf4j:slf4j-simple:1.7.36'
+    api 'org.json:json:20220320'
+    api ("org.springframework:spring-context:5.3.19") {
         exclude module: "spring-beans"
     }
-    compile ("org.certificateservices.messages:certservice-messages:2203.1"){
+    api ("org.certificateservices.messages:certservice-messages:2203.1"){
         // certservice-messages is using a newer version of xmlsec and bouncy castle
         // which is not compatible with the current version of DSS library.
         exclude module: "xmlsec"
@@ -53,15 +62,10 @@ dependencies {
     }
     runtime "org.slf4j:slf4j-simple:1.7.36"
     testCompile "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
-}
 
-buildscript {
-    repositories {
-        mavenLocal()
-        maven { url 'https://repo.certificateservices.se/artifactory/libs-release-local' }
-        maven { url "https://plugins.gradle.org/m2/" }
-        mavenCentral()
-    }
+    integrationTestImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
+    integrationTestImplementation "org.spockframework:spock-core"
+
 }
 
 task uploadGdc(type: Upload) {
