--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,6 @@ sourceSets {
     }
 }
 
-
 configurations {
     integrationTestCompileClasspath.extendsFrom testCompileClasspath
     integrationTestRuntimeOnly.extendsFrom runtimeOnly
@@ -47,6 +46,9 @@ dependencies {
     api "org.slf4j:slf4j-api:1.7.36"
     api "org.slf4j:slf4j-simple:1.7.36"
     api "org.json:json:20220320"
+    api "org.slf4j:slf4j-simple:1.7.36"
+    api "org.apache.httpcomponents:httpclient:4.5.13"
+    api "org.bouncycastle:bcprov-jdk15on:1.70"
     api ("org.springframework:spring-context:5.3.20") {
         exclude module: "spring-beans"
     }
@@ -56,19 +58,18 @@ dependencies {
         exclude module: "xmlsec"
         exclude group: "org.bouncycastle"
     }
-    api project(":signservice-configuration")
-    runtimeOnly "org.slf4j:slf4j-simple:1.7.36"
+    api project(":signservice-java-configuration")
+
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.14.0"
+
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
-
-    // To fix vulnerability CVE-2020-13956.
-    implementation "org.apache.httpcomponents:httpclient:4.5.13"
-
-    // To fix vulnerability CVE-2020-0187, CVE-2020-15522, CVE-2020-28052.
-    implementation "org.bouncycastle:bcprov-jdk15on:1.70"
 
     integrationTestImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
     integrationTestImplementation "org.spockframework:spock-core"
+}
 
+test {
+    useJUnitPlatform()
 }
 
 task uploadGdc(type: Upload) {
