--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,12 @@ dependencies {
     }
     api project(":signservice-java-configuration")
 
+    implementation "joda-time:joda-time:2.10.6"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.14.0"
 
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
+    testImplementation "org.codehaus.groovy:groovy-xml:3.0.12"
+    testImplementation "org.codehaus.groovy:groovy-yaml:3.0.12"
 
     integrationTestImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
     integrationTestImplementation "org.spockframework:spock-core"
