--- a/src/test/resources/profiles/testProfile1.yml
+++ b/src/test/resources/profiles/testProfile1.yml
@@ -1,3 +1,6 @@
+# Basic test profile using RSA
+
+relatedProfile: "testProfile1"
 xadesSignatureLevel: "XAdES-BASELINE-B"
 xadesSignaturePacking: "ENVELOPED"
 xadesCanonicalizationAlgorithmURI: "http://www.w3.org/2001/10/xml-exc-c14n#"
