--- a/src/test/resources/profiles/testProfile2.yml
+++ b/src/test/resources/profiles/testProfile2.yml
@@ -1,3 +1,6 @@
+# Basic test profile using ECDSA
+
+relatedProfile: "testProfile2"
 xadesSignatureLevel: "XAdES-BASELINE-B"
 xadesSignaturePacking: "ENVELOPED"
 xadesCanonicalizationAlgorithmURI: "http://www.w3.org/2001/10/xml-exc-c14n#"
