--- a/src/test/resources/profiles/testProfile3.yml
+++ b/src/test/resources/profiles/testProfile3.yml
@@ -1,3 +1,6 @@
+# Basic test profile using ECDSA and encrypted sign message.
+
+relatedProfile: "testProfile3"
 xadesSignatureLevel: "XAdES-BASELINE-B"
 xadesSignaturePacking: "ENVELOPED"
 xadesCanonicalizationAlgorithmURI: "http://www.w3.org/2001/10/xml-exc-c14n#"
