--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     api "eu.europa.ec.joinup.sd-dss:dss-utils:$dssVersion"
     api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:$dssVersion"
     api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:$dssVersion"
+    api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:$dssVersion"
     api "org.apache.pdfbox:pdfbox:2.0.27"
     api "org.apache.santuario:xmlsec:2.3.1"
     api "org.slf4j:slf4j-api:1.7.36"
