--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     implementation "joda-time:joda-time:2.10.6"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.14.0"
+    implementation 'com.fasterxml.woodstox:woodstox-core:6.4.0'
 
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.12"
