--- a/build.gradle
+++ b/build.gradle
@@ -59,11 +59,15 @@ dependencies {
     implementation "joda-time:joda-time:2.10.6"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.14.0"
 
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:$dssVersion"
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:$dssVersion"
+    testImplementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    testImplementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.69'
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.12"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.12"
 
-    integrationTestImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
+    integrationTestImplementation platform("org.spockframework:spock-bom:2.2-groovy-3.0")
     integrationTestImplementation "org.spockframework:spock-core"
 }
 
