--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ test {
     useJUnitPlatform()
 }
 
-task uploadGdc(type: Upload) {
+tasks.register('uploadGdc', Upload) {
     configuration = configurations.archives
     uploadDescriptor = true
 
