--- a/build.gradle
+++ b/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.12"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.12"
 
-    integrationTestImplementation platform("org.spockframework:spock-bom:2.2-groovy-3.0")
-    integrationTestImplementation "org.spockframework:spock-core"
+    testImplementation platform("org.spockframework:spock-bom:2.2-groovy-3.0")
+    testImplementation "org.spockframework:spock-core"
 }
 
 test {
