--- a/build.gradle
+++ b/build.gradle
@@ -31,25 +31,25 @@ configurations.configureEach {
 }
 
 dependencies {
-    api "eu.europa.ec.joinup.sd-dss:dss-xades:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-cades:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-pades:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-service:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-utils:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:5.13"
-    api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:5.13"
-    api "org.apache.pdfbox:pdfbox:2.0.27"
+    api "eu.europa.ec.joinup.sd-dss:dss-xades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-cades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-pades-pdfbox:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-service:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:${dssVersion}"
+    api "org.apache.pdfbox:pdfbox:2.0.31"
     api "org.apache.santuario:xmlsec:2.3.4"
     api "org.slf4j:slf4j-api:1.7.36"
-    api("org.json:json:20240205") {
+    api("org.json:json:20240303") {
         exclude group: 'cn.hutool', module: 'hutool-json'
     }
     api "org.slf4j:slf4j-simple:1.7.36"
     api "org.apache.httpcomponents:httpclient:4.5.14"
     api "org.bouncycastle:bcprov-jdk18on:1.76"
-    api("org.springframework:spring-context:5.3.34") {
+    api("org.springframework:spring-context:5.3.35") {
         exclude module: "spring-beans"
     }
     api("org.certificateservices.messages:certservice-messages:v2402.1") {
@@ -64,10 +64,10 @@ dependencies {
         api("se.signatureservice.configuration:signservice-java-configuration:v2402.1")
     }
     implementation "joda-time:joda-time:2.10.14"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.14.3"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.17.1"
 
-    testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:5.13"
-    testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:5.13"
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
+    testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
     testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
     testImplementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatEmbedVersion}"
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
