--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     api("org.springframework:spring-context:5.3.30") {
         exclude module: "spring-beans"
     }
-    api("org.certificateservices.messages:certservice-messages") {
+    api("org.certificateservices.messages:certservice-messages:2401.1") {
         // certservice-messages is using a newer version of xmlsec and bouncy castle
         // which is not compatible with the current version of DSS library.
         exclude(module: "xmlsec")
