--- a/build.gradle
+++ b/build.gradle
@@ -43,25 +43,18 @@ dependencies {
     api "org.apache.pdfbox:pdfbox:2.0.31"
     api "org.apache.santuario:xmlsec:2.3.4"
     api "org.slf4j:slf4j-api:2.0.13"
+    api "org.slf4j:slf4j-simple:2.0.13"
     api("org.json:json:20240303") {
         exclude group: 'cn.hutool', module: 'hutool-json'
     }
-    api "org.slf4j:slf4j-simple:2.0.13"
-    api "org.apache.httpcomponents:httpclient:4.5.14"
-    api "org.bouncycastle:bcprov-jdk18on:1.76"
-    api("org.springframework:spring-context:5.3.36") {
+    api("org.springframework:spring-context:5.3.37") {
         exclude module: "spring-beans"
     }
-    api("org.certificateservices.messages:certservice-messages:2405.1") {
-        // certservice-messages is using a newer version of xmlsec and bouncy castle
-        // which is not compatible with the current version of DSS library.
-        exclude(module: "xmlsec")
-        exclude(group: "org.bouncycastle")
-    }
+    api("org.certificateservices.messages:certservice-messages:2405.1")
     if (project.rootProject.name == "signservice") {
         api project(":signservice-java-configuration")
     } else {
-        api("se.signatureservice.configuration:signservice-java-configuration:v2403.3")
+        api("se.signatureservice.configuration:signservice-java-configuration:v2405.1")
     }
     implementation "joda-time:joda-time:2.10.14"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.17.1"
@@ -69,7 +62,7 @@ dependencies {
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
     testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatEmbedVersion}"
+    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:9.0.89"
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.21"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.21"
