--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
-group "se.signatureservice.support"
+plugins {
+    id("groovy")
+    id("java-library")
+}
 
-apply plugin: "groovy"
-apply plugin: "java-library"
+group "se.signatureservice.support"
 
 pluginManager.withPlugin('org.certificateservices.gradle.certservice-gradle-plugin') {
     certserviceSettings {
@@ -54,7 +56,7 @@ dependencies {
     if (project.rootProject.name == "signservice") {
         api project(":signservice-java-configuration")
     } else {
-        api("se.signatureservice.configuration:signservice-java-configuration:2501.1")
+        api("se.signatureservice.configuration:signservice-java-configuration:2502.1")
     }
     implementation "joda-time:joda-time:2.10.14"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.17.3"
