--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     api "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons:${dssVersion}"
     api "eu.europa.ec.joinup.sd-dss:dss-crl-parser-x509crl:${dssVersion}"
     api "eu.europa.ec.joinup.sd-dss:dss-tsl-validation:${dssVersion}"
-    api "org.apache.pdfbox:pdfbox:2.0.32"
+    api "eu.europa.ec.joinup.sd-dss:dss-diagnostic-jaxb:${dssVersion}"
+    api "eu.europa.ec.joinup.sd-dss:dss-validation:${dssVersion}"
     api "org.apache.santuario:xmlsec:2.3.4"
     api "org.slf4j:slf4j-api:2.0.16"
     api "org.slf4j:slf4j-simple:2.0.16"
@@ -65,10 +66,13 @@ dependencies {
     implementation "joda-time:joda-time:2.10.14"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.17.3"
 
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+    implementation 'jakarta.activation:jakarta.activation-api:2.0.0'
+
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
     testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:9.0.83"
+    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.36"
     testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.23"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.23"
