--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id("java-library")
 }
 
-group "se.signatureservice.support"
+group = "se.signatureservice.support"
 
 repositories {
     mavenCentral()
@@ -33,9 +33,6 @@ dependencies {
     api "org.apache.santuario:xmlsec:2.3.5"
     api "org.slf4j:slf4j-api:2.0.17"
     api "org.slf4j:slf4j-simple:2.0.17"
-    api("org.json:json:20250107") {
-        exclude group: 'cn.hutool', module: 'hutool-json'
-    }
     api("org.springframework:spring-context:5.3.39") {
         exclude module: "spring-beans"
     }
@@ -49,7 +46,6 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:2.19.0"
 
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
-    implementation 'jakarta.activation:jakarta.activation-api:2.1.3'
 
     // To fix vulnerability CVE-2025-27820 derived from eu.europa.ec.joinup.sd-dss:dss-service
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.4'
@@ -58,13 +54,12 @@ dependencies {
 
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
-    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.40"
+    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.41"
     testImplementation "com.squareup.okhttp3:okhttp:4.12.0"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.24"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.24"
 
-    testImplementation platform("org.spockframework:spock-bom:2.3-groovy-3.0")
+    testImplementation platform("org.spockframework:spock-bom:2.4-M6-groovy-3.0")
     testImplementation "org.spockframework:spock-core"
 }
 
