--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:2.19.0"
 
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+    implementation 'jakarta.activation:jakarta.activation-api:2.1.3'
 
     // To fix vulnerability CVE-2025-27820 derived from eu.europa.ec.joinup.sd-dss:dss-service
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.4'
