--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ dependencies {
         api project(":signservice-messages")
         api project(":signservice-java-configuration")
     } else {
-        api("se.signatureservice.messages:signservice-messages:2506.1")
-        api("se.signatureservice.configuration:signservice-java-configuration:2506.1")
+        api("se.signatureservice.messages:signservice-messages:2509.1")
+        api("se.signatureservice.configuration:signservice-java-configuration:2509.1")
     }
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.1"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.20.0"
 
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
     implementation 'jakarta.activation:jakarta.activation-api:2.1.3'
@@ -53,9 +53,12 @@ dependencies {
     implementation 'org.apache.httpcomponents.core5:httpcore5:5.3.4'
     implementation 'org.apache.httpcomponents.core5:httpcore5-h2:5.3.4'
 
+    // To fix vulnerability CVE-2025-48924
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
+
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-token:${dssVersion}"
     testImplementation "eu.europa.ec.joinup.sd-dss:dss-test:${dssVersion}"
-    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.42"
+    testImplementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.46"
     testImplementation "com.squareup.okhttp3:okhttp:4.12.0"
     testImplementation "org.codehaus.groovy:groovy-xml:3.0.25"
     testImplementation "org.codehaus.groovy:groovy-yaml:3.0.25"
